2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c: Use grub_util_fd_strerror instead
	of strerror.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Split out blocklist retrieving from setup.c to
	grub-core/osdep/blocklist.c and add windows implementation since
	generic version doesn't work on NTFS on Windows due to aggressive
	unflushable cache.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Split grub-setup.c into frontend (grub-setup.c) and backend (setup.c)
	files.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/windows/hostdisk.c (grub_util_fd_strerror):
	Cut tailing newline. Remove arbitrary limitation. Always use
	grub_util_tchar_to_utf8.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Handle %% properly.
	* tests/printf_unit_test.c (printf_test): Add %% tests.
	Reported by: Paulo Flabiano Smorigo.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/windows/hostdisk.c (fsync) [__MINGW32__]: Really
	implement fsync.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for nvlist_lookup_string in nvpair since we
	use nvlist_lookup_string and don't use nvlist_print.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Add wrappers around rename, unlink, mkdir, opendir, readdir and
	closedir to handle filename charset translation.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/emu/hostdisk.h: Move file operations to
	* include/grub/emu/hostfile.h: ... here.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/windows/hostdisk.c (canonicalize_file_name): Handle
	unicode path.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/checksums.h: Regenerate due to swiss.sed change.

2013-10-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Move cpu time retrieval to separate grub_util_get_cpu_time_ms
	and remove export.h.
